methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:25: error: Unmatched closing brace '}' ignored here
}
^